--- a/Hangman2/src/main/webapp/templates/index.html
+++ b/Hangman2/src/main/webapp/templates/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
+    <script type="text/javascript" src="/static/static.js" defer></script>
 </head>
 <body>
-Welcome
+<div>
+    <div>
+        <button class="button" data-letter="cica">Ez egy gomb</button>
+    </div>
+</div>
 </body>
 </html>
