--- a/Hangman2/src/main/webapp/templates/index.html
+++ b/Hangman2/src/main/webapp/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <script type="text/javascript" src="/static/static.js" defer></script>
+    <script type="text/javascript" src="/static/JS/static.js" defer></script>
 </head>
 <body>
 <div>
