--- a/Hangman2/src/main/webapp/templates/index.html
+++ b/Hangman2/src/main/webapp/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <script type="text/javascript" src="/static/JS/static.js" defer></script>
+    <script type="text/javascript" src="/static/static.js" defer></script>
 </head>
 <body>
+<header>123456</header>
 <div>
     <div>
         <button class="button" data-letter="cica">Ez egy gomb</button>
